--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "Elastic-Beanstalk-Sample-App",
   "version": "0.0.1",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "x509": "0.3.2"
+  },
   "scripts": {
     "start": "node app.js"
   }
